# car_claim_mng

./: README.md
backend/: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  env.py  main.py  pyproject.toml
backend/app/core/: config.py  database.py  main.py
backend/app/dependencies/: authentication.py  datagen.py
backend/app/models/: authentication.py  cars.py
backend/app/routers/: authentication.py  cars.py  user.py
backend/app/schemas/: authentication.py
mobile/: .env  .gitignore  README.md  pubspec.yaml
mobile/android/: build.gradle
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/Runner/: AppDelegate.swift  Config.plist  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/config/: main_configurations.dart
mobile/lib/config/theme/: app_themes.dart
mobile/lib/constants/strings/: api_consts.dart  app_consts.dart  app_router_consts.dart  app_strings.dart  assets.dart  local_consts.dart  local_storage_consts.dart
mobile/lib/constants/style/: animation_consts.dart  app_colors.dart  app_text_styles.dart
mobile/lib/mappers/: car_mapper.dart  report_mapper.dart  tokens_mapper.dart  user_mapper.dart
mobile/lib/mappers/base/: base_mapper.dart
mobile/lib/models/data/: api_response_model.dart  car_model.dart  report_model.dart  tokens_model.dart  (+1 more)
mobile/lib/services/: file_picker_service.dart  service_locator.dart
mobile/lib/states/: custom_bloc_observer.dart
mobile/lib/utils/: app_router.dart  toast_notifier.dart
mobile/test/: widget_test.dart
(+69 files in other folders)
