[tool.poetry]
name = "pasha insurance"
version = "0.1.0"
description = "pasha insurance backend app"
authors = ["Vugar Abdulali <vabdulaliyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pymysql = "^1.1.0"
pydantic-settings = "^2.0.3"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
boto3 = "^1.28.80"
faker = "^20.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
requests-toolbelt = "^1.0.0"
gradio-client = "^0.7.0"
numpy = "^1.26.2"
keras = "^2.15.0"
keras-utils = "^1.0.13"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
